--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-quickstart",
+  "name": "angular-vn-azu",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,10 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.1",
+    "@angular/cdk": "^15.0.0",
     "@angular/common": "^15.0.1",
     "@angular/compiler": "^15.0.1",
     "@angular/core": "^15.0.1",
     "@angular/forms": "^15.0.1",
+    "@angular/material": "^15.0.0",
     "@angular/platform-browser": "^15.0.1",
     "@angular/platform-browser-dynamic": "^15.0.1",
     "@angular/router": "^15.0.1",
@@ -36,6 +38,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "netlify-plugin-cypress": "^2.2.0",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.4"
   }
 }
